# nawaloka-nl2sql-platform

./: .env example  .gitignore  Makefile  README.md  dir_structure.txt  docker-compose.yml  pyproject.toml
config/: model.yaml  params.yaml
report/: engineering_report.md
scripts/: download_traces.py  seed_supabase.py
src/agents/: fallback_agent.py  interpreter_agent.py  router_agent.py  sql_agent.py
src/dashboard/: app.py
src/engine/: db_client.py  orchestrator.py  prompt_builder.py  sql_validator.py
src/utils/: config.py  llm_services.py  observability.py
tests/: test_validator.py
traces/: complex_trace.json  failed_trace.json  simple_trace.json
